--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Civilization, Oriental'
 - !lcc 'CB'
 - !lcsh 'United States -- Civilization'
+- GITenberg
 tableOfContents: India -- China -- Japan -- America.
 title: 'Appearances: Being Notes of Travel'
 url: http://www.gutenberg.org/ebooks/27347
